2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: RDF reification implemented.

	* RDFXML.pm: undef vs false bug fixed.
	Reification implemented.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* RDFXML.pm: s/id/ID/ for attribute name.
	The |node| arguments are added for |ontriple| calls.
	Too many "attribute not allowed" errors were raised.

	* ContentChecker.pm: Initial experimental support for rdf:RDF
	element.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* RDFXML.pm: New module.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (set_inner_html): Line/column number
	code was old one yet.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Better line/column reporting for "duplicate attribute"
	errors.  Line/column markings for DOCTYPE, comment, and
	character tokens are reintroduced; otherwise,
	error location for "not HTML5" error and errors
	for implied elements are not attached.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Set line/column numbers to attributes.

	* NanoDOM.pm (create_attribute_ns, set_attribute_node_ns): Added.
	(value): Setter implemented.

	* mkhtmlparser.pl: Set line/column numbers to Attr nodes.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Unused line/column markings are removed.

2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): Remove |first_start_tag|
	flag, which is no longer used.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Set line/column information to element nodes.

	* mkhtmlparser.pl (!!!create-element, !!!insert-element,
	and !!!insert-element-t): Set line/column information to
	element nodes.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): The first "<" character
	in "<?", "<>", or "</>" should be the error point.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Some more fixes on error position reporting.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>
