@@ -1,5 +1,10 @@
 2008-03-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* RDFXML.pm: bnodeid implemented.  Relative references
+	are now resolved.
+
+2008-03-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm: RDF reification implemented.
 
 	* RDFXML.pm: undef vs false bug fixed.
